2022-02-23  J Pascoe  <j_pascoe@apple.com>

        Prevent use of PDFKit when using PDF.js
        https://bugs.webkit.org/show_bug.cgi?id=237052
        rdar://89251696

        Reviewed by Tim Horton.

        Add WEBCORE_EXPORT in order to use isPDFMIMEType.

        * platform/MIMETypeRegistry.h:

2022-02-23  Alan Bujtas  <zalan@apple.com>

        [IFC][Integration] LineLayout::firstInlineBoxRect should flip the rect coordinates for vertical-rl
        https://bugs.webkit.org/show_bug.cgi?id=237036

        Reviewed by Antti Koivisto and Darin Adler.

        This is similar to what RenderInline::firstInlineBoxTopLeft does.

        * layout/integration/LayoutIntegrationLineLayout.cpp:
        (WebCore::LayoutIntegration::LineLayout::firstInlineBoxRect const):

2022-02-23  J Pascoe  <j_pascoe@apple.com>

        [WebAuthn] userHandle not marked nullable in _WKWebAuthenticationAssertionResponse
        https://bugs.webkit.org/show_bug.cgi?id=237043
        rdar://89317740

        Reviewed by Brent Fulgham.

        The userHandle is a nullable field on UserEntity. This patch changes
        various API/SPI to allow passing null userHandle.

        * Modules/webauthn/AuthenticatorAssertionResponse.cpp:
        (WebCore::AuthenticatorAssertionResponse::create):
        (WebCore::AuthenticatorAssertionResponse::AuthenticatorAssertionResponse):
        * Modules/webauthn/AuthenticatorAssertionResponse.h:

2022-02-23  Antti Koivisto  <antti@apple.com>

        [CSS Container Queries] offsetWidth/Height and similar should update layout for container queries
        https://bugs.webkit.org/show_bug.cgi?id=237079

        Reviewed by Simon Fraser.

        Fix

        css/css-contain/container-queries/inline-size-containment.html
        css/css-contain/container-queries/inline-size-containment-vertical-rl.html

        * dom/Document.cpp:
        (WebCore::Document::updateLayout):

        Make iterative instead of recursive.
